--- a/papers/ecoop2012/article.tex
+++ b/papers/ecoop2012/article.tex
@@ -246,7 +246,7 @@ Now, we define the implementation:
 \begin{lstlisting}
 trait DebugExp extends Debug with EffectExp {
   case class Log(msg: Exp[String]) extends Def[Unit]
-  def log(msg: Exp[String]): Exp[Unit] = reflectEffect(Log(s))
+  def log(msg: Exp[String]): Exp[Unit] = reflectEffect(Log(msg))
 }
 \end{lstlisting}
 
@@ -797,6 +797,8 @@ function f1() {
     window.setTimeout(f2, xs[i]*1000)
     msg = xs[i]
     i++
+  } else {
+    console.log("done")
   }
 }
 function f2() {
@@ -813,6 +815,8 @@ for (x <- xs.suspendable) {
   console.log(String.valueOf(x))
 }
 log("done")
+
+
 
 
 
@@ -1050,7 +1054,7 @@ The only difference between the parallel and serial versions of the Twitter exam
 \section{Evaluation}\label{sec:eval}
 
 We've implemented our DSL in Scala.\footnote{The code can be found at
-  \url{http://github.com/namin/lms-sandbox} We used our DSL to
+  \url{http://github.com/namin/lms-sandbox}} We used our DSL to
 develop a few web applications, which are simple but not
 trivial. First, we implemented a few drawing examples like the
 snowflakes of figure~\ref{fig:snowflakes}. We extended the Twitter
