--- a/papers/ecoop2012/article.tex
+++ b/papers/ecoop2012/article.tex
@@ -225,6 +225,13 @@ function test(x0) {
   }
   return x6
 }
+
+The generated code ressembles single-assignment form. The nested
+\code{for}-loop is desugared into a \code{flatMap} which generates the
+nested \code{for}-loop and the \code{splice} pattern concatenating the
+inner \code{x4} arrays into one \code{x6} array in the JavaScript
+code.\footnote{Obviously, the generated code can be optimized further.}
+
 \end{lstlisting}
 
 \subsection{Walkthrough: defining a DSL component}\label{sec:defineDslComponent}
@@ -349,7 +356,7 @@ each method call, as shown in the walkthrough
 in section~\ref{sec:defineDslComponent}. For example,
 \code{document.getElementById("canvas")} becomes the IR node {\tt\small
   MethodCall(document, "getElementById", List("canvas"))}. This is a
-mechanical transformation, implemented by \code{repProxy} using
+mechanical transformation, implemented by \code{repProxy}, a library method using
 reflection to intercept method calls and generate IR nodes based on
 the method name and the arguments of the invocation. Note that this
 use of reflection is purely at staging time, so there is no overhead
@@ -387,7 +394,7 @@ program~\cite{wadler-blame,blame-for-all}. Passing a value from an
 untyped portion to a typed one usually requires a cast. Another
 situation where casts are needed is interaction with external
 services. For example, to process data from an external service such
-as Twitter, we cast it to its expected type:
+as Twitter, we cast it to its expected type (an array of JSON objects, each with a field called \code{text}):
 \begin{lstlisting}
 type TwitterResponse = Array[JSLiteral {val text: String}]
 def fetchTweets(username: Rep[String]) = {
@@ -435,7 +442,7 @@ method call and field access returns another \code{DynamicRep}
 expression, so dynamic expressions can be chained.
 
 \code{DynamicRep} exploits a new Scala feature, based on a
-marker trait \code{Dynamic}: An expression whose type \code{T} is a
+special trait \code{Dynamic}: An expression whose type \code{T} is a
 subtype of \code{Dynamic} is subject to the following rewrites:
 \begin{itemize}
 \item \code{x.f} rewrites to \code{x.selectDynamic("f")},
@@ -652,7 +659,7 @@ object literals, such as \code{JSON.stringify} or jQuery's \code{css}.
 As for implementation, notice that the type of a \code{new JSLiteral
   \{...\}} expression is not \code{JSLiteral \{...\}} but
 \code{Rep[JSLiteral \{...\}]}. This is achieved with support from the
-Scala-Virtualized compiler. \code{JSLiteral} inherits from a special marker
+Scala-Virtualized compiler. \code{JSLiteral} inherits from a special
 trait, which indicates its \code{new} expressions should be
 reified. So the \code{new} expression is turned into a method call,
 with information about all the field definitions. A complication is
@@ -744,7 +751,18 @@ reset {
 }
 \end{lstlisting}
 
-There are a few things worth noting here. First, the return type of \code{foo} method is rewritten to be \code{ControlContext}\footnote{The \code{ControlContext} class implements the continuation monad and is provided by Scala's standard library. \code{ControlContext} is similar to C\#'s \code{Task<T>}, but more general.}. This is due to the fact that \code{sleep} is used in the body of \code{foo}. Also, note that the code to be executed after sleeping is captured as a continuation (anynomous function) and passed to the \code{ControlContext} through a call of the \code{map} method. The body of the \code{reset} block is rewritten in a similar vein.
+There are a few things worth noting here. First, the return type of
+\code{foo} method is rewritten to be
+\code{ControlContext}.\footnote{The \code{ControlContext} class
+  implements the continuation monad and is provided by Scala's
+  standard library. \code{ControlContext[A,B,C]} is similar to C\#'s
+  \code{Task<T>}, but more general. In our discussion, we omit the
+  type parameters for simplicity.} This is due to the fact that
+\code{sleep} is used in the body of \code{foo}. Also, note that the
+code to be executed after sleeping is captured as a continuation
+(anynomous function) and passed to the \code{ControlContext} through a
+call of the \code{map} method. The body of the \code{reset} block is
+rewritten in a similar vein.
 
 Now, let's have a closer look how \code{sleep} itself is implemented:
 
@@ -782,7 +800,7 @@ The \code{setTimeout} method expects an argument of type \code{Rep[Unit=>Unit]} 
 
 It's important to note that reification preserves function composition. Specifically, let \code{f: Rep[A] => Rep[B]} and \code{g: Rep[B] => Rep[C]} then {\tt\small fun(g compose f) == (fun(g) compose fun(f))} where we consider two reified functions to be equal if they yield the same observable effects at runtime. That property of function reification is at the core of reusing the continuation monad in our DSL. Thanks to the fact that the continuation monad composes functions, we can just insert reification at some places (like in a \code{sleep}) and make sure that we reify \emph{effects} of the continuation monad without the need to reify the monad itself.
 
-\subsection{CPS for Interruptible Traversals}
+\subsection{CPS for Suspendable Traversals}
 We need to be able to suspend our execution while traversing an array in order to implement functionality from listing~\ref{code:twitter_example}. Let's consider a simplified example where we want to iterate over an array and sleep during each iteration. We present both code written in JavaScript and our DSL that achieves that (listings~\ref{code:js:sleep_iter}~\&~\ref{code:sleep_iter}).
 \begin{figure}
 \lstset{basicstyle=\ttfamily\scriptsize}
@@ -848,7 +866,7 @@ implicit def richArray(xs: Rep[Array[A]]) = new {
   def suspendable: SArrayOps[A] = new SArrayOps[A](xs)
 }
 \end{lstlisting}
-The idea behind \code{suspendable} arrays is that iteration over them can be interrupted. We'll have a closer look at how to achieve that with the help of CPS. The \code{suspendable} method returns a new instance of the \code{SArrayOps} class defined here:
+The idea behind \code{suspendable} arrays is that iteration over them can be suspended. We'll have a closer look at how to achieve that with the help of CPS. The \code{suspendable} method returns a new instance of the \code{SArrayOps} class defined here:
 
 \begin{lstlisting}[caption=Suspendable foreach,label=code:suspendable_foreach]
 class SArrayOps(xs: Rep[Array[A]]) {
@@ -859,7 +877,9 @@ class SArrayOps(xs: Rep[Array[A]]) {
     }
 }
 \end{lstlisting}
-Note that one cannot use while loops in CPS but we can simulate them with recursive functions. Let's see how regular while loop can be simulated with a recursive function:
+Note that one cannot use while loops in CPS but we can simulate them
+with recursive functions. Let's see how a regular while loop can be
+simulated with a recursive function with call-by-name parameters:
 \begin{lstlisting}
 def recursiveWhile(cond: => Boolean)(body: => Unit): Unit = {
   def rec = () => if (cond) { body; rec() } else {}
@@ -882,7 +902,7 @@ def suspendableWhile(cond: => Rep[Boolean])(
 
 \subsection{Defining the Ajax API}
 
-With the abstractions for interruptible loops and traversals at hand,
+With the abstractions for suspendable loops and traversals at hand,
 what remains to complete the Twitter example from the beginning of the section
 is the actual Ajax request/response cycle.
 
