--- a/papers/ecoop2012/article.tex
+++ b/papers/ecoop2012/article.tex
@@ -795,7 +795,7 @@ After the rewriting, all CPS-related type annotations are dropped and use of the
 
 \subsection{CPS and Staging}
 Let's write the example from listing~\ref{code:cps_scala} in our DSL. We need to define \code{sleep} to use JavaScript's \code{setTimeout}
-\footnote{The \code{setTimeout} function executes asynchronously a function passed as an argument after specified delay.}
+\footnote{The \code{setTimeout} function asynchronously executes a function passed as an argument after a specified delay.}
 as a replacement for the \code{Timer} abstraction.
 \begin{lstlisting}
 def sleep(delay: Rep[Int]) = shift { k: (Rep[Unit]=>Rep[Unit]) =>
