Fixed problem with listing numbering.
Note: if you happen to have colon
in a label for your listing you need
to put it in curly braces, otherwise
latex gets confused.

--- a/papers/ecoop2012/article.tex
+++ b/papers/ecoop2012/article.tex
@@ -771,7 +771,7 @@ rewritten in a similar vein.
 
 Now, let's have a closer look how \code{sleep} itself is implemented:
 
-\begin{lstlisting}[label=code:cps_scala]
+\begin{lstlisting}[label={code:cps_scala},caption={\code{sleep} implementation}]
 import java.util.{Timer,TimerTask}
 val timer = new Timer
 def sleep(delay: Int): Unit @suspendable = shift { k =>
