change code url

--- a/papers/ecoop2012/article.tex
+++ b/papers/ecoop2012/article.tex
@@ -1082,7 +1082,7 @@ The only difference between the parallel and serial versions of the Twitter exam
 \section{Evaluation}\label{sec:eval}
 
 We've implemented our DSL in Scala.\footnote{The code can be found at
-  \url{http://github.com/namin/lms-sandbox}} We used our DSL to
+  \url{http://github.com/js-scala}} We used our DSL to
 develop a few web applications, which are simple but not
 trivial. First, we implemented a few drawing examples like the
 snowflakes of figure~\ref{fig:snowflakes}. We extended the Twitter
