--- a/papers/ecoop2012/article.tex
+++ b/papers/ecoop2012/article.tex
@@ -1090,7 +1090,7 @@ from selected users in an interactive way. In order to do so, we
 incorporated a useful subset of the DOM API and jQuery library using our
 typed APIs.
 
-Also, we integrated our DSL with an existing web framework, Play 2.0.\footnote{http://www.playframework.org/}
+Also, we integrated our DSL with an existing web framework, Play 2.0.\footnote{\url{http://www.playframework.org}}
 Our DSL can be used to define Play form validators that are executed both at the client and the server side.
 We managed to achieve that without deep changes to how the framework works internally proving that our
 DSL can be used as a library.
