citing csharp dynamic

--- a/papers/ecoop2012/refs.bib
+++ b/papers/ecoop2012/refs.bib
@@ -1,5 +1,21 @@
 % --- put paper-specific BibTeX entries here --- %
 
+@inproceedings{csharp-dynamic,
+ author = {Bierman, Gavin and Meijer, Erik and Torgersen, Mads},
+ title = {Adding dynamic types to C},
+ booktitle = {Proceedings of the 24th European conference on Object-oriented programming},
+ series = {ECOOP'10},
+ year = {2010},
+ isbn = {3-642-14106-4, 978-3-642-14106-5},
+ location = {Maribor, Slovenia},
+ pages = {76--100},
+ numpages = {25},
+ url = {http://dl.acm.org/citation.cfm?id=1883978.1883986},
+ acmid = {1883986},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+} 
+
 @inproceedings{staging,
  author = {J{\o}rring, Ulrik and Scherlis, William L.},
  title = {Compilers and staging transformations},
