--- a/papers/ecoop2012/refs.bib
+++ b/papers/ecoop2012/refs.bib
@@ -1,5 +1,10 @@
 % --- put paper-specific BibTeX entries here --- %
 
+@MISC{tomasp-fsharp,
+    author = {Tomáš Petříček and Don Syme},
+    title = {F\# Web Tools: Rich client/server web applications in F\#}
+}
+
 @inproceedings{csharp-dynamic,
  author = {Bierman, Gavin and Meijer, Erik and Torgersen, Mads},
  title = {Adding dynamic types to C},
